--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.about-text {
+  font-size: 30px;
+}
+
+strong {
+  font-family: "Times New Roman", Times, serif;
+}
