--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,34 @@
 }
 
 .about-text {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 strong {
   font-family: "Times New Roman", Times, serif;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: space-between;
+}
+
+h1 {
+  text-align: center;
+  font-size: 40px;
+}
+
+p {
+  padding-left: 50px;
+  width: 450px;
+}
+
+.ui.massive.button {
+  margin-left: 50px;
+}
+
+.icon {
+  size: 50px;
 }
